updating yaml and minor changes
